tests/baselines/reference/this_inside-object-literal-getters-and-setters.errors.txt
this_inside-object-literal-getters-and-setters.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== this_inside-object-literal-getters-and-setters.ts (1 errors) ====
    module ObjectLiteral {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        var ThisInObjectLiteral = {
            _foo: '1',
            get foo(): string {
                return this._foo;
            },
            set foo(value: string) {
                this._foo = value;
            },
            test: function () {
                return this._foo;
            }
        }
    }
    
    